--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type='text/css' href='/main.css'>
-  <title>Things</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+  <title>Te Mauri Moemoe&amacr;</title>
 </head>
 <body>
   <div id="app"></div>
